2003-12-29  Kingpin  <mthurn@verizon.net>

	* t/basic.t: make all tests pass

2003-10-22  Kingpin  <mthurn@verizon.net>

	* Lycos.pm (parse_tree): fix typo which caused blank URLs (thanks to Thomas Busch)

2003-09-20  Kingpin  <mthurn@verizon.net>

	* Lycos.pm (parse_tree): fix parsing for new lycos.com output format

	* t/gui.t: new file

	* t/basic.t: new file

2003-01-27  Kingpin  <mthurn@carbon>

	* Lycos.pm (parse_tree): fix parsing for new lycos.com output format

2002-07-18  Kingpin  <mthurn@copper.dulles.tasc.com>

	* test.pl: rewrite using Test::More

	* Lycos.pm: overhaul for current www.lycos.com formats

2000-12-20

	* VERSION 2.15 RELEASED
	
2000-12-19  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm (native_retrieve_some): rewrite using HTML::TreeBuilder, correcting parsing errors

2000-09-20

	* VERSION 2.14 RELEASED
	
2000-09-21  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm (native_retrieve_some): was missing GUI results with no description

2000-09-19

	* VERSION 2.13 RELEASED
	
2000-09-18  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm (native_retrieve_some): BUGFIX for missing page count number

2000-09-15

	* VERSION 2.12 RELEASED
	
2000-09-15  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm (native_retrieve_some): parse new output format

2000-06-15  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm: new method gui_query, and parse new output format

Revision history for Perl extension WWW::Search::Lycos.