@@ -14,4 +14,3 @@ Makefile.PL
 MANIFEST			This list of files
 README
 t/basic.t
-t/gui.t
