@@ -15,6 +15,14 @@ requires('Test::More');
 check_nmake();      # check and download nmake.exe for Win32
 &Makefile->write;
 
+print STDERR <<"ENDOFNOTE";
+
+NOTE: The author of this module finds that www.lycos.com is extremely unreliable.
+A test that fails might succeed if you run it again a few seconds later.
+As long as you don't get ALL zero results, it's probably safe to install this module.
+
+ENDOFNOTE
+
 1;
 
 __END__
